--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
   },
   "homepage": "https://github.com/Aayu-shh/Expense-Tracker-App#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql2": "^3.5.2",
     "nodemon": "^3.0.1",
+    "path": "^0.12.7",
     "sequelize": "^6.32.1"
   }
 }
