--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "razorpay": "^2.9.2",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "sib-api-v3-sdk": "^8.5.0"
   }
 }
