--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "path": "^0.12.7",
     "razorpay": "^2.9.2",
     "sequelize": "^6.32.1",
-    "sib-api-v3-sdk": "^8.5.0"
+    "sib-api-v3-sdk": "^8.5.0",
+    "uuid": "^9.0.1"
   }
 }
