--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "momentjs": "^2.0.0",
     "mysql2": "^3.5.2",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
